--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,10 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="/AlgLab5"/>
 	<classpathentry exported="true" kind="lib" path="lib/stdlib-package.jar"/>
+	<classpathentry kind="lib" path="src/lib/xstream-1.4.8.jar"/>
+	<classpathentry kind="lib" path="src/lib/guava-18.0.jar"/>
+	<classpathentry kind="lib" path="lib/lib/guava-18.0.jar"/>
+	<classpathentry kind="lib" path="lib/lib/xstream-1.4.8.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
